@startuml asymmetrical property CD
package "Asymmetrical Properties" {
    ' Base class for all asymmetrical properties
    abstract class "BaseAsymProperty<MonoBehaviour>" as base
    {
        + abstract void ApplyPerspectiveProfile(PerspectiveProfile profile)
    }

    abstract class "BaseAsymProperty <<T>>\nwhere T : Component" as baseT
    {
        # T AsymComponent
    }


    ' concrete implementations of asymmetrical properties
    class AsymCollider
    {
        - PerspectiveProfile _profile
        + override void ApplyPerspectiveProfile(PerspectiveProfile profile)
    }

    class AsymGeometry 
    {
        - Mesh _humanMesh
        - Mesh _catMesh
        + override void ApplyPerspectiveProfile(PerspectiveProfile profile)
    }

    class AsymVisibility
    {
        - PerspectiveProfile _profile
        + override void ApplyPerspectiveProfile(PerspectiveProfile profile)
    }

    class AsymMaterial
    {
        - Material _humanMaterial
        - Material _catMaterial
        + override void ApplyPerspectiveProfile(PerspectiveProfile profile)
    }

    class AsymLight
    {
        - PerspectiveProfile _profile
        + override void ApplyPerspectiveProfile(PerspectiveProfile profile)
    }

    ' relationships
    base <|-- baseT

    baseT <|-- AsymCollider: T::Collider
    baseT <|-- AsymGeometry: T::MeshFilter
    baseT <|- AsymMaterial: T::Renderer
    baseT <|-- AsymVisibility: T::Renderer
    AsymLight -|> baseT: T::Light
}
@enduml